--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 /saves/
 /commands/__pycache__/
 /modules/__pycache__/textures.cpython-312.pyc
+/modules/__pycache__/blocks_info.cpython-312.pyc
+/modules/__pycache__/sounds.cpython-312.pyc
