--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 /modules/__pycache__/textures.cpython-312.pyc
 /modules/__pycache__/blocks_info.cpython-312.pyc
 /modules/__pycache__/sounds.cpython-312.pyc
+/modules/__pycache__/checks.cpython-312.pyc
+/modules/__pycache__/classes.cpython-312.pyc
